--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@
   font-family: "Barlow", Helvetica;
   font-weight: 700;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 30px;
   letter-spacing: 0;
   line-height: normal;
+  text-align: justify;
+  text-transform: uppercase;
 }
 
 .portfolio .FORM {
@@ -212,6 +214,10 @@
   left: 0;
 }
 
+.portfolio .portfolio-text{
+  padding-left: 10px;
+  padding-right: 50px;
+}
 .portfolio .overlap-3 {
   position: relative;
   width: 1920px;
@@ -239,7 +245,7 @@
   position: absolute;
   width: 215px;
   top: 0;
-  left: 925px;
+  left: 800px;
   font-family: "Barlow", Helvetica;
   font-weight: 700;
   color: #ffffff;
@@ -253,7 +259,7 @@
   position: absolute;
   width: 1170px;
   top: 60px;
-  left: 444px;
+  left: 300px;
   color: #ffffff;
   text-align: center;
   position: absolute;
@@ -262,7 +268,7 @@
   font-size: 24px;
   letter-spacing: 0;
   line-height: normal;
-  text-align: center;
+  text-align: center, justify;
 }
 
 .portfolio .rectangle {
@@ -350,6 +356,7 @@
   width: 1920px;
   height: 799px;
   background-color: #2bae66;
+  text-align: justify;
 }
 
 .portfolio .text-wrapper-8 {
@@ -368,17 +375,20 @@
 
 .portfolio .lorem-ipsum-dolor-2 {
   width: 480px;
-  top: 211px;
+  top: 160px;
   left: 1179px;
   color: #ffffff;
   position: absolute;
   font-family: "Barlow", Helvetica;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   letter-spacing: 0;
   line-height: normal;
 }
 
+.portfolio .service-right p{
+  top: 70px;
+}
 .portfolio .STORYTELL {
   top: 461px;
   left: 570px;
@@ -748,6 +758,7 @@
   font-size: 24px;
   letter-spacing: 0;
   line-height: normal;
+  text-align: justify;
 }
 
 /* Hero Section*/
@@ -980,6 +991,20 @@ footer{
 
 footer p{
   color: #bdbdbd;
+}
+
+footer a{
+  display: inline-flex;
+  justify-content: center;
+  color: #f5f5f5;
+  background: #4F9E34 ;
+  padding: 0.6rem;
+  border-radius: 5px;
+}
+
+footer a i{
+  font-size: 1.5rem;
+  color:  #000000;
 }
 
 
